# rust-workspace-and-features

./: Cargo.toml  README.md
lib/a/: Cargo.toml
lib/a/src/: lib.rs
lib/b/: Cargo.toml
lib/b/src/: lib.rs
lib/c/: Cargo.toml
lib/c/src/: lib.rs
